Clean the code & comments
